overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi # necessary for Kustomize identification
spec:
  template:
    spec:
      containers:
      - image: quay.io/dawid_jedrzejczak/restapi:latest
        name: restapi # necessary for Kustomize identification
